--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .container{
   display: flex;
   flex-direction: column;
-  flex-shrink: 0px;
-  width: 960px;
-
+  flex-shrink: 1px;
+  flex-grow: 0px;
+  margin: 0;
+ max-width: 400px;
+ max-height: 400px;
 
 }
 
@@ -14,9 +21,26 @@
 .gridBlock{
  display: flex;
  flex-shrink: 1;
- width: 40px;
- height: 40px;
+ width: 20px;
+ height: 20px;
    border :1px solid blue;
    background-color: white;
 
+}
+.dark{
+  background-color: black;
+  color: white;
+}
+.colors{
+  background-color: aqua;
+}
+.white{
+  background-color: red;
+}
+.all{
+  display: flex;
+ 
+  flex-direction: column;
+  
+  gap: 8px;
 }
