--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   margin: 0;
  max-width: 400px;
  max-height: 400px;
+ border: 1px solid black;
 
 }
 
@@ -23,7 +24,6 @@ body{
  flex-shrink: 1;
  width: 20px;
  height: 20px;
-   border :1px solid blue;
    background-color: white;
 
 }
